[workspace.package]
edition = "2024"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
license = "MIT"
repository = "https://github.com/vhrdtech/ww_stdlib"

[workspace]
resolver = "3"

members = [
  "ww_version",
  "ww_date_time",
  "ww_si",
  "ww_gpio",
  "ww_dfu",
  "ww_can_bus",
  "ww_log_bare_metal",
]

[workspace.dependencies]
shrink_wrap = { path = "../shrink_wrap/shrink_wrap", default-features = false }
wire_weaver = { path = "../wire_weaver/wire_weaver", default-features = false }