[workspace.package]
edition = "2024"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
license = "MIT"
repository = "https://github.com/vhrdtech/ww_stdlib"

[workspace]
resolver = "3"

members = [
  "ww_client_server",
  "ww_version",
  "ww_date_time",
  "ww_si",
  "ww_gpio",
  "ww_dfu",
  "ww_can_bus",
  "ww_log_bare_metal",
  "ww_self",
  "ww_global",
  "ww_board_info",
  "ww_counters",
  "ww_spi",
  "ww_i2c",
  "ww_uart",
  "ww_indication",
]

[workspace.dependencies]
shrink_wrap = { path = "../shrink_wrap/shrink_wrap", default-features = false }
wire_weaver = { path = "../wire_weaver/wire_weaver", default-features = false }
ww_date_time = { version = "0.1.0", path = "./ww_date_time", default-features = false }
ww_log_bare_metal = { version = "0.1.0", path = "./ww_log_bare_metal", default-features = false }
