[package]
name = "ww_client_server"
version = "0.1.0"
authors.workspace = true
description = "Client-server API model data types for both no_std and std."
edition.workspace = true
license.workspace = true

[dependencies]
wire_weaver.workspace = true
ww_version = { version = "0.1.0", path = "../ww_version", default-features = false }

[features]
default = ["std"]
std = ["wire_weaver/std", "ww_version/std"]