[package]
name = "ww_self"
version = "0.1.0"
authors.workspace = true
description = "WireWeaver of WireWeaver itself for dynamic access to APIs, expression eval and introspection"
edition.workspace = true
license.workspace = true

[dependencies]
shrink_wrap.workspace = true
ww_numeric = { version = "0.1.0", path = "../ww_numeric", default-features = false }
ww_version = { version = "0.1.0", path = "../ww_version", default-features = false }
defmt = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["shrink_wrap/std", "ww_numeric/std"]
defmt = ["dep:defmt", "shrink_wrap/defmt", "ww_numeric/defmt"]
