[package]
name = "ww_version"
version = "0.1.0"
authors.workspace = true
description = ""
edition.workspace = true
license.workspace = true

[dependencies]
shrink_wrap.workspace = true
semver = { version = "1", default-features = false, optional = true }
defmt = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["shrink_wrap/std", "semver/std"]
defmt = ["dep:defmt", "shrink_wrap/defmt"]
semver = ["dep:semver"]

[dev-dependencies]
hex-literal = "1"